@@ -863,6 +863,7 @@ eventHandlers.customTemplate=Custom template
 eventHandlers.script.nullResult=Returned null
 eventHandlers.script.success=Success: {0}
 eventHandlers.script.successUnchanged=Success, no new value
+eventHandlers.script.successNoEmail=Success, email sending cancelled
 eventHandlers.script.failure=Failure: {0}
 eventHandlers.invalidActiveScript=Invalid active script
 eventHandlers.invalidActiveScriptError=Error in active script: {0}
